--- a/style.css
+++ b/style.css
@@ -338,9 +338,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         max-width: 95vw;
-        /* Set a larger maximum width for the modal content in viewport units */
         max-height: 95vh;
-        /* Set a larger maximum height for the modal content in viewport units */
         width: auto;
     }
 
@@ -359,10 +357,24 @@
         width: 100%;
         height: 100%;
         max-width: 100%;
-        /* Ensure the video doesn't exceed its natural size */
         max-height: 100%;
         object-fit: contain;
-        /* Maintain the aspect ratio while fitting within the container */
+    }
+
+    /* Video Modal Content (YouTube-style size) */
+    .video-modal-content {
+        @apply w-[80vw] h-[45vh] mx-auto
+    }
+
+    /* SamCart Modal Content (Larger landscape) */
+    .samcart-modal-content {
+        @apply w-[90vw] lg:w-[60vw] max-h-[80vh]
+    }
+
+
+    /* Close Button Styles */
+    .video-close {
+        @apply text-white hover:text-feature hover:duration-500 text-[24px] absolute top-[10px] right-[10px] cursor-pointer
     }
 
     /* Slick Container */
@@ -486,15 +498,15 @@
         place-content: center;
         position: relative;
     }
-    
+
     input[type="radio"]:checked {
         background-color: currentColor;
     }
-    
+
     input[type="radio"]:focus {
         outline: none;
-    }    
-    
+    }
+
     input[type="radio"]::before {
         content: "";
         width: 0.35em;
@@ -504,30 +516,31 @@
         transition: 250ms transform ease-in-out;
         box-shadow: inset 1em 1em var(--featured);
     }
-    
+
     input[type="radio"]:checked {
         border-color: var(--featured);
         background-color: transparent;
     }
-    
+
     input[type="radio"]:checked::before {
         transform: scale(1);
     }
-    
+
     /* Checkbox */
-    input[type="checkbox"], input[type="radio"] {
-        appearance: none; 
-        background: transparent; 
-        margin: 0; 
-        color: currentColor; 
-        width: 0.85em; 
-        height: 0.85em; 
-        border: 1.6px solid currentColor; 
+    input[type="checkbox"],
+    input[type="radio"] {
+        appearance: none;
+        background: transparent;
+        margin: 0;
+        color: currentColor;
+        width: 0.85em;
+        height: 0.85em;
+        border: 1.6px solid currentColor;
         display: inline-grid;
-        place-content: center; 
-        position: relative; 
-    }    
-    
+        place-content: center;
+        position: relative;
+    }
+
     input[type="checkbox"]::before {
         content: "✓";
         transform: scale(0);
@@ -537,11 +550,11 @@
         transition: 145ms all ease-in-out;
         color: var(--featured);
     }
-    
+
     input[type="checkbox"]:checked {
         border-color: rgb(255, 255, 255, 0.7);
     }
-    
+
     input[type="checkbox"]:checked::before {
         transform: scale(1);
         bottom: -.2rem;
