--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1248,11 +1248,23 @@ input[type="checkbox"]:checked::before {
 .h-screen {
   height: 100vh;
 }
+.h-\[45vw\] {
+  height: 45vw;
+}
+.h-\[70vh\] {
+  height: 70vh;
+}
 .max-h-16 {
   max-height: 4rem;
 }
 .max-h-\[80vh\] {
   max-height: 80vh;
+}
+.max-h-\[450px\] {
+  max-height: 450px;
+}
+.max-h-\[700px\] {
+  max-height: 700px;
 }
 .min-h-\[100vh\] {
   min-height: 100vh;
@@ -1284,8 +1296,20 @@ input[type="checkbox"]:checked::before {
 .w-full {
   width: 100%;
 }
+.w-\[60vw\] {
+  width: 60vw;
+}
+.w-\[80vw\] {
+  width: 80vw;
+}
 .max-w-3xl {
   max-width: 48rem;
+}
+.max-w-\[1000px\] {
+  max-width: 1000px;
+}
+.max-w-\[800px\] {
+  max-width: 800px;
 }
 .shrink-0 {
   flex-shrink: 0;
