--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -843,8 +843,13 @@ video {
 .video-modal-content {
   margin-left: auto;
   margin-right: auto;
-  height: 45vh;
-  width: 80vw;
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  .video-modal-content {
+    max-height: 45%;
+    width: 80vw;
+  }
 }
 /* SamCart Modal Content (Larger landscape) */
 .samcart-modal-content {
@@ -859,10 +864,10 @@ video {
 /* Close Button Styles */
 .video-close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 1rem;
+  right: 12%;
   cursor: pointer;
-  font-size: 24px;
+  font-size: 3rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -1239,6 +1244,9 @@ input[type="checkbox"]:checked::before {
 .h-\[10vh\] {
   height: 10vh;
 }
+.h-\[45vh\] {
+  height: 45vh;
+}
 .h-\[65vh\] {
   height: 65vh;
 }
@@ -1248,23 +1256,11 @@ input[type="checkbox"]:checked::before {
 .h-screen {
   height: 100vh;
 }
-.h-\[45vw\] {
-  height: 45vw;
-}
-.h-\[70vh\] {
-  height: 70vh;
-}
 .max-h-16 {
   max-height: 4rem;
 }
 .max-h-\[80vh\] {
   max-height: 80vh;
-}
-.max-h-\[450px\] {
-  max-height: 450px;
-}
-.max-h-\[700px\] {
-  max-height: 700px;
 }
 .min-h-\[100vh\] {
   min-height: 100vh;
@@ -1284,6 +1280,9 @@ input[type="checkbox"]:checked::before {
 .min-h-\[92vh\] {
   min-height: 92vh;
 }
+.w-4\/5 {
+  width: 80%;
+}
 .w-\[10vh\] {
   width: 10vh;
 }
@@ -1296,20 +1295,8 @@ input[type="checkbox"]:checked::before {
 .w-full {
   width: 100%;
 }
-.w-\[60vw\] {
-  width: 60vw;
-}
-.w-\[80vw\] {
-  width: 80vw;
-}
 .max-w-3xl {
   max-width: 48rem;
-}
-.max-w-\[1000px\] {
-  max-width: 1000px;
-}
-.max-w-\[800px\] {
-  max-width: 800px;
 }
 .shrink-0 {
   flex-shrink: 0;
