video correct size

--- a/_layouts/promo.html
+++ b/_layouts/promo.html
@@ -42,8 +42,8 @@
     <!-- Video Modal Structure -->
     <div id="videoModal" class="modal" style="display: none;">
         <div class="modal-content video-modal-content">
-            <span class="close video-close" style="cursor: pointer;">&times;</span>
-            <iframe id="videoIframe" frameborder="0" allowfullscreen class="rounded-none w-4/5 h-[45vh] mx-auto">
+            <span class="close video-close">&times;</span>
+            <iframe id="videoIframe" frameborder="0" allowfullscreen class="rounded-none w-4/5 h-[20vh] md:h-[32vh] lg:h-[60vh] mx-auto">
             </iframe>
         </div>
     </div>
