--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -843,12 +843,17 @@ video {
 .video-modal-content {
   margin-left: auto;
   margin-right: auto;
+  max-height: 20vh;
   width: 100%;
+}
+@media (min-width: 768px) {
+  .video-modal-content {
+    max-height: 32vh;
+  }
 }
 @media (min-width: 1024px) {
   .video-modal-content {
-    max-height: 45%;
-    width: 80vw;
+    height: 60vh;
   }
 }
 /* SamCart Modal Content (Larger landscape) */
@@ -1244,8 +1249,8 @@ input[type="checkbox"]:checked::before {
 .h-\[10vh\] {
   height: 10vh;
 }
-.h-\[45vh\] {
-  height: 45vh;
+.h-\[20vh\] {
+  height: 20vh;
 }
 .h-\[65vh\] {
   height: 65vh;
@@ -1817,6 +1822,9 @@ input[type="checkbox"]:checked::before {
   .md\:h-8 {
     height: 2rem;
   }
+  .md\:h-\[32vh\] {
+    height: 32vh;
+  }
   .md\:min-h-\[90vh\] {
     min-height: 90vh;
   }
@@ -1916,6 +1924,9 @@ input[type="checkbox"]:checked::before {
   }
   .lg\:hidden {
     display: none;
+  }
+  .lg\:h-\[60vh\] {
+    height: 60vh;
   }
   .lg\:w-\[30\%\] {
     width: 30%;
