--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -841,6 +841,7 @@ video {
     }
 /* Video Modal Content (YouTube-style size) */
 .video-modal-content {
+  top: 50%;
   margin-left: auto;
   margin-right: auto;
   max-height: 20vh;
@@ -853,6 +854,7 @@ video {
 }
 @media (min-width: 1024px) {
   .video-modal-content {
+    top: 35%;
     height: 60vh;
   }
 }
