--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@
 
     /* Video Modal Content (YouTube-style size) */
     .video-modal-content {
-        @apply w-full max-h-[20vh] md:max-h-[32vh] lg:h-[60vh] mx-auto
+        @apply w-full max-h-[20vh] md:max-h-[32vh] lg:h-[60vh] mx-auto top-[50%] lg:top-[35%]
     }
 
     /* SamCart Modal Content (Larger landscape) */
