--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1626,6 +1626,10 @@ input[type="checkbox"]:checked::before {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
 .font-\[100\] {
   font-weight: 100;
 }
@@ -2014,6 +2018,12 @@ input[type="checkbox"]:checked::before {
   }
   .lg\:pt-0 {
     padding-top: 0px;
+  }
+  .lg\:text-\[3rem\] {
+    font-size: 3rem;
+  }
+  .lg\:text-\[2\.5rem\] {
+    font-size: 2.5rem;
   }
 }
 @media (min-width: 1280px) {
