--- a/_includes/form-retreat.html
+++ b/_includes/form-retreat.html
@@ -6,22 +6,22 @@
       action="https://manamei.us19.list-manage.com/subscribe/post?u=375b24e2d707297f066e35f7e&amp;id=8e7408ea22&amp;f_id=00130de4f0"
       method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self"
       novalidate="">
-      <div id="mc_embed_signup_scroll" class="grid md:grid-cols-7 gap-2">
+      <div id="mc_embed_signup_scroll" class="grid lg:grid-cols-4 gap-2">
 
         <!-- First Name -->
-        <div class="mc-field-group md:col-span-2">
+        <div class="mc-field-group md:col-span-1">
           <input type="text" name="FNAME" class="required text bg-transparent border border-white w-full"
             placeholder=" First Name" id="mce-FNAME" required="" value="">
         </div>
 
         <!-- Last Name -->
-        <div class="mc-field-group md:col-span-2">
+        <div class="mc-field-group md:col-span-1">
           <input type="text" name="LNAME" class="required text bg-transparent border border-white w-full"
             placeholder=" Last Name" id="mce-LNAME" required="" value="">
         </div>
 
         <!-- Email -->
-        <div class="mc-field-group md:col-span-2">
+        <div class="mc-field-group md:col-span-1">
           <input type="email" name="EMAIL" class="required email bg-transparent border border-white w-full"
             placeholder=" Email" id="mce-EMAIL" required="" value="">
         </div>
