--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1101,6 +1101,12 @@ input[type="checkbox"]:checked::before {
 .top-\[50\%\] {
   top: 50%;
 }
+.bottom-20p {
+  bottom: 20%;
+}
+.top-20p {
+  top: 20%;
+}
 .z-20 {
   z-index: 20;
 }
@@ -1679,6 +1685,9 @@ input[type="checkbox"]:checked::before {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.underline {
+  text-decoration-line: underline;
+}
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1839,6 +1848,9 @@ input[type="checkbox"]:checked::before {
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
+  .md\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
   .md\:m-0 {
     margin: 0px;
   }
@@ -1904,6 +1916,9 @@ input[type="checkbox"]:checked::before {
   }
   .md\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
+  }
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .md\:gap-2 {
     gap: 0.5rem;
@@ -1998,6 +2013,9 @@ input[type="checkbox"]:checked::before {
   }
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .lg\:p-0 {
     padding: 0px;
