--- a/_includes/form-masterclass-replay.html
+++ b/_includes/form-masterclass-replay.html
@@ -10,17 +10,17 @@
 
                 <!-- First Name -->
                 <div class="mc-field-group md:col-span-2">
-                    <input type="text" name="FNAME" class="required text bg-transparent border border-white w-full" placeholder=" First Name" id="mce-FNAME" required="" value="">
+                    <input type="text" name="FNAME" class="required text bg-transparent border border-white w-full rounded-none" placeholder=" First Name" id="mce-FNAME" required="" value="">
                     </div>
                 
                 <!-- Last Name -->
                 <div class="mc-field-group md:col-span-2">
-                    <input type="text" name="LNAME" class="required text bg-transparent border border-white w-full" placeholder=" Last Name" id="mce-LNAME" required="" value="">
+                    <input type="text" name="LNAME" class="required text bg-transparent border border-white w-full rounded-none" placeholder=" Last Name" id="mce-LNAME" required="" value="">
                 </div>
 
                 <!-- Email -->
                 <div class="mc-field-group md:col-span-2">
-                    <input type="email" name="EMAIL" class="required email bg-transparent border border-white w-full" placeholder=" Email" id="mce-EMAIL" required="" value="">
+                    <input type="email" name="EMAIL" class="required email bg-transparent border border-white w-full rounded-none" placeholder=" Email" id="mce-EMAIL" required="" value="">
                 </div>
 
                 <!-- Button -->
