--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1044,9 +1044,6 @@ input[type="checkbox"]:checked::before {
         transform: scale(1);
         bottom: -.2rem;
     }
-.visible {
-  visibility: visible;
-}
 .invisible {
   visibility: hidden;
 }
@@ -1104,17 +1101,8 @@ input[type="checkbox"]:checked::before {
 .top-\[50\%\] {
   top: 50%;
 }
-.bottom-20p {
-  bottom: 20%;
-}
-.top-20p {
-  top: 20%;
-}
-.bottom-10p {
-  bottom: 10%;
-}
-.top-10p {
-  top: 10%;
+.-top-4 {
+  top: -1rem;
 }
 .z-20 {
   z-index: 20;
@@ -1641,10 +1629,6 @@ input[type="checkbox"]:checked::before {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
 .font-\[100\] {
   font-weight: 100;
 }
@@ -1854,11 +1838,11 @@ input[type="checkbox"]:checked::before {
   .md\:order-first {
     order: -9999;
   }
-  .md\:col-span-2 {
-    grid-column: span 2 / span 2;
-  }
   .md\:col-span-1 {
     grid-column: span 1 / span 1;
+  }
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
   }
   .md\:m-0 {
     margin: 0px;
@@ -1925,9 +1909,6 @@ input[type="checkbox"]:checked::before {
   }
   .md\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
-  }
-  .md\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .md\:gap-2 {
     gap: 0.5rem;
@@ -2045,9 +2026,6 @@ input[type="checkbox"]:checked::before {
   }
   .lg\:pt-0 {
     padding-top: 0px;
-  }
-  .lg\:text-\[3rem\] {
-    font-size: 3rem;
   }
   .lg\:text-\[2\.5rem\] {
     font-size: 2.5rem;
