--- a/_includes/popup.html
+++ b/_includes/popup.html
@@ -6,7 +6,7 @@
     <div id="popupContent" class="relative">
         <!-- Close Button (X) in upper-right corner -->
         <button id="popupClose"
-            class="absolute -top-4 right-6 text-[1.5rem] font-100 text-white hover:text-feature hover:duration-500">
+            class="absolute top-4 right-6 text-[1.5rem] font-100 text-white hover:text-feature hover:duration-500">
             X
         </button>
         <div class="text-center p-10p">
