updated form and copy

--- a/_includes/optin-apply-ltm.html
+++ b/_includes/optin-apply-ltm.html
@@ -1,4 +1,4 @@
-<div class="px-5p md:px-10p text-center">
-    <h3 class="text-feature mt-12 mb-4">{{page.cta.text}}</h3>
+<div class="px-5p lg:px-10p text-center">
+    <h3 class="text-feature mt-8 mb-4 text-[1.2rem] lg:w-[80%] mx-auto"><strong>{{page.cta.text}}</strong></h3>
     {% include form-apply-ltm.html %}
 </div>
