waitlist to apply now

--- a/_includes/banner-masterclass.html
+++ b/_includes/banner-masterclass.html
@@ -1,4 +1,4 @@
-<a href="/theartofdancinglife.html"><section class="bg-feature text-black text-center py-4">
-    <p><strong>Join Mana Mei’s 2-Day “The Art of Dancing Life” Masterclass — November 19th & 20th</strong>
-    <br>Click here to learn more</p>
+<a href="/liberation-through-movement-mentorship.html"><section class="bg-feature text-black text-center py-4">
+    <p><strong>Now Accepting Applications for the next 4-Month Mentorship Cycle happening January 13- May 5th.</strong>
+    <br>Spaces limited! Click here for more all the details and to apply.</p>
 </section></a>
