--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     {% include cookie-banner.html %}
 
     <!-- Popup Masterclass -->
-    {% include popup-aodl.html %}
+    {% include popup-mentorship.html %}
 
     <!-- Alpine -->
     <script src="//unpkg.com/alpinejs" defer></script>
