--- a/_includes/popup-mentorship.html
+++ b/_includes/popup-mentorship.html
@@ -1,6 +1,6 @@
 <div id="popupOverlay" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50"></div>
 
-<div id="popup" class=" fixed inset-0 z-50 flex items-center justify-center">
+<div id="popup" class="hidden fixed inset-0 z-50 flex items-center justify-center">
     <div class="relative max-w-[95vw] md:max-w-[80vw] lg:max-w-[40vw]">
         <button id="closePopup" class="absolute top-[1rem] md:top-[2rem] right-[1.5rem] md:right-[2.5rem] text-feature text-[3rem] font-extralight hover:text-black hover:duration-500">&times;</button>
 
