fixed url popup

--- a/_includes/popup-mentorship.html
+++ b/_includes/popup-mentorship.html
@@ -42,7 +42,7 @@
         // Learn more button action
         document.getElementById('learnMoreButton').addEventListener('click', function () {
             closePopup();
-            window.location.href = 'https://manamei.com/theartofdancinglife'; 
+            window.location.href = 'https://manamei.com/liberation-through-movement-mentorship'; 
         });
     });
 </script>
