--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1305,6 +1305,9 @@ input[type="checkbox"]:checked::before {
 .min-h-\[92vh\] {
   min-height: 92vh;
 }
+.min-h-full {
+  min-height: 100%;
+}
 .w-4\/5 {
   width: 80%;
 }
