inside the course

--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1498,6 +1498,9 @@ input[type="checkbox"]:checked::before {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\/uploads\/images\/manamei-95\.JPEG\'\)\] {
+  background-image: url('/uploads/images/manamei-95.JPEG');
+}
 .bg-cover {
   background-size: cover;
 }
